# SemantiCore

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  TESTING_GUIDE.md  design_recommendations.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
.deploy/: fly.toml  railway.json  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Dockerfile  config.py  requirements.txt
backend/api/: dependencies.py  main.py
backend/api/models/: requests.py  responses.py
backend/api/routers/: extraction.py  jobs.py  materialization.py  ontology.py  projects.py  query.py  sources.py
backend/db/: connection.py  models.py
backend/services/: extraction_service.py  materialization_service.py  ontology_service.py  query_service.py
data/examples/: ecommerce_orders.csv  notes.md  products_usage_events.json  research_papers.json  users_companies_contracts.csv
data/raw/: .gitkeep
docs/: ARCHITECTURE.md  DEPLOYMENT.md  QUICK_START.md  USAGE_GUIDE.md
frontend/: App.tsx  Dockerfile  constants.tsx  index.html  nginx.conf  package.json  types.ts
frontend/components/: OntologyGraph.tsx  ProjectWizard.tsx  Sidebar.tsx
frontend/src/api/: client.ts  extraction.ts  jobs.ts  ontology.ts  projects.ts  sources.ts
frontend/src/hooks/: usePolling.ts
scripts/: start.bat  start.sh
src/semantic_mapper/: __init__.py
src/semantic_mapper/extraction/: __init__.py  extractor.py
(+35 files in other folders)
